[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "orts"
version = "0.4.0"
description = "Simple HTML-based stream overlay"
authors = ["Nhan <hi@imnhan.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "*"
pycountry = "*"
pefile = {version = "*", platform = "win32"}
pypiwin32 = {version = "*", platform = "win32"}
pywin32-ctypes = {version = "*", platform = "win32"}
pyinstaller = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
ipdb = "*"
